Agrego el bot con el post de mensaje
El bot solo puede enviar un mensaje
