# dto/notification.go
@@ -1,0 +1,5 @@
+package dto
+
+type Notification struct {
+	Message string
+}
